typed dynamic form initialized

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-dynamic-form [formGroup]="quizForm.form" [controls]="quizForm.controls | async"></app-dynamic-form>
+<div>
+  <h2>My typed dynamic form</h2>
+  <app-dynamic-form [formModel]="myForm"></app-dynamic-form>
+</div>
