--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div>
   <h2>My typed dynamic form</h2>
-  <app-dynamic-form [formModel]="myForm"></app-dynamic-form>
+  <app-dynamic-form [formBase]="myForm"
+  (submitted)="onSubmit()"></app-dynamic-form>
 </div>
