tmp solution, changed remove/add control for disable enable, and check if raw value needed on dynamic form component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
   <h2>My typed dynamic form</h2>
   <app-dynamic-form [formBase]="myForm"
-  (submitted)="onSubmit()"></app-dynamic-form>
+  (submitted)="onSubmit($event)"></app-dynamic-form>
 </div>
