all control class and translation handling for labels and placeholders are initialized

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h2>My typed dynamic form</h2>
+  <h2>{{ 'test' | translate }}</h2>
   <app-dynamic-form [formBase]="myForm"
   (submitted)="onSubmit($event)"></app-dynamic-form>
 </div>
